// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Button should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Signup
    name="btn next-btn"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="panel-body"
>
          <h2
                    className="title"
          >
                    Sign up
          </h2>
          <div
                    className="input-fields"
          >
                    <div
                              className="input-line"
                    >
                              Username:
                              <input
                                        name="username"
                                        onChange={[Function]}
                                        type="text"
                              />
                    </div>
                    <div
                              className="input-line"
                    >
                              Password:
                              <input
                                        name="password"
                                        onChange={[Function]}
                                        type="password"
                              />
                    </div>
                    <div
                              className="input-line"
                    >
                              Re-enter Password:
                              <input
                                        name="check_password"
                                        onChange={[Function]}
                                        type="password"
                              />
                    </div>
                    <div
                              className="input-line"
                    >
                              Email:
                              <input
                                        name="email"
                                        onChange={[Function]}
                                        type="text"
                              />
                    </div>
                    <div
                              className="radio-input"
                    >
                              <label
                                        htmlFor="customer"
                              >
                                        Customer
                              </label>
                              <input
                                        id="customer"
                                        name="login_type"
                                        onChange={[Function]}
                                        type="radio"
                                        value="customer"
                              />
                              <label
                                        htmlFor="chef"
                              >
                                        Chef
                              </label>
                              <input
                                        id="chef"
                                        name="login_type"
                                        onChange={[Function]}
                                        type="radio"
                                        value="chef"
                              />
                    </div>
          </div>
</div>,
        <div
          className="panel-footer"
>
          <Link
                    onClick={[Function]}
                    replace={false}
                    to="login"
          >
                    <button
                              className="btn next-btn"
                    >
                              Sign up
                    </button>
          </Link>
</div>,
      ],
      "className": "outer-panel",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="title"
>
              Sign up
</h2>,
            <div
              className="input-fields"
>
              <div
                            className="input-line"
              >
                            Username:
                            <input
                                          name="username"
                                          onChange={[Function]}
                                          type="text"
                            />
              </div>
              <div
                            className="input-line"
              >
                            Password:
                            <input
                                          name="password"
                                          onChange={[Function]}
                                          type="password"
                            />
              </div>
              <div
                            className="input-line"
              >
                            Re-enter Password:
                            <input
                                          name="check_password"
                                          onChange={[Function]}
                                          type="password"
                            />
              </div>
              <div
                            className="input-line"
              >
                            Email:
                            <input
                                          name="email"
                                          onChange={[Function]}
                                          type="text"
                            />
              </div>
              <div
                            className="radio-input"
              >
                            <label
                                          htmlFor="customer"
                            >
                                          Customer
                            </label>
                            <input
                                          id="customer"
                                          name="login_type"
                                          onChange={[Function]}
                                          type="radio"
                                          value="customer"
                            />
                            <label
                                          htmlFor="chef"
                            >
                                          Chef
                            </label>
                            <input
                                          id="chef"
                                          name="login_type"
                                          onChange={[Function]}
                                          type="radio"
                                          value="chef"
                            />
              </div>
</div>,
          ],
          "className": "panel-body",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Sign up",
              "className": "title",
            },
            "ref": null,
            "rendered": "Sign up",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="input-line"
>
                  Username:
                  <input
                                    name="username"
                                    onChange={[Function]}
                                    type="text"
                  />
</div>,
                <div
                  className="input-line"
>
                  Password:
                  <input
                                    name="password"
                                    onChange={[Function]}
                                    type="password"
                  />
</div>,
                <div
                  className="input-line"
>
                  Re-enter Password:
                  <input
                                    name="check_password"
                                    onChange={[Function]}
                                    type="password"
                  />
</div>,
                <div
                  className="input-line"
>
                  Email:
                  <input
                                    name="email"
                                    onChange={[Function]}
                                    type="text"
                  />
</div>,
                <div
                  className="radio-input"
>
                  <label
                                    htmlFor="customer"
                  >
                                    Customer
                  </label>
                  <input
                                    id="customer"
                                    name="login_type"
                                    onChange={[Function]}
                                    type="radio"
                                    value="customer"
                  />
                  <label
                                    htmlFor="chef"
                  >
                                    Chef
                  </label>
                  <input
                                    id="chef"
                                    name="login_type"
                                    onChange={[Function]}
                                    type="radio"
                                    value="chef"
                  />
</div>,
              ],
              "className": "input-fields",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Username:",
                    <input
                      name="username"
                      onChange={[Function]}
                      type="text"
/>,
                  ],
                  "className": "input-line",
                },
                "ref": null,
                "rendered": Array [
                  "Username:",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "name": "username",
                      "onChange": [Function],
                      "type": "text",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Password:",
                    <input
                      name="password"
                      onChange={[Function]}
                      type="password"
/>,
                  ],
                  "className": "input-line",
                },
                "ref": null,
                "rendered": Array [
                  "Password:",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "name": "password",
                      "onChange": [Function],
                      "type": "password",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Re-enter Password:",
                    <input
                      name="check_password"
                      onChange={[Function]}
                      type="password"
/>,
                  ],
                  "className": "input-line",
                },
                "ref": null,
                "rendered": Array [
                  "Re-enter Password:",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "name": "check_password",
                      "onChange": [Function],
                      "type": "password",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Email:",
                    <input
                      name="email"
                      onChange={[Function]}
                      type="text"
/>,
                  ],
                  "className": "input-line",
                },
                "ref": null,
                "rendered": Array [
                  "Email:",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "name": "email",
                      "onChange": [Function],
                      "type": "text",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      htmlFor="customer"
>
                      Customer
</label>,
                    <input
                      id="customer"
                      name="login_type"
                      onChange={[Function]}
                      type="radio"
                      value="customer"
/>,
                    <label
                      htmlFor="chef"
>
                      Chef
</label>,
                    <input
                      id="chef"
                      name="login_type"
                      onChange={[Function]}
                      type="radio"
                      value="chef"
/>,
                  ],
                  "className": "radio-input",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Customer",
                      "htmlFor": "customer",
                    },
                    "ref": null,
                    "rendered": "Customer",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "id": "customer",
                      "name": "login_type",
                      "onChange": [Function],
                      "type": "radio",
                      "value": "customer",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Chef",
                      "htmlFor": "chef",
                    },
                    "ref": null,
                    "rendered": "Chef",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "id": "chef",
                      "name": "login_type",
                      "onChange": [Function],
                      "type": "radio",
                      "value": "chef",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Link
            onClick={[Function]}
            replace={false}
            to="login"
>
            <button
                        className="btn next-btn"
            >
                        Sign up
            </button>
</Link>,
          "className": "panel-footer",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <button
              className="btn next-btn"
>
              Sign up
</button>,
            "onClick": [Function],
            "replace": false,
            "to": "login",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Sign up",
              "className": "btn next-btn",
            },
            "ref": null,
            "rendered": "Sign up",
            "type": "button",
          },
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="panel-body"
>
            <h2
                        className="title"
            >
                        Sign up
            </h2>
            <div
                        className="input-fields"
            >
                        <div
                                    className="input-line"
                        >
                                    Username:
                                    <input
                                                name="username"
                                                onChange={[Function]}
                                                type="text"
                                    />
                        </div>
                        <div
                                    className="input-line"
                        >
                                    Password:
                                    <input
                                                name="password"
                                                onChange={[Function]}
                                                type="password"
                                    />
                        </div>
                        <div
                                    className="input-line"
                        >
                                    Re-enter Password:
                                    <input
                                                name="check_password"
                                                onChange={[Function]}
                                                type="password"
                                    />
                        </div>
                        <div
                                    className="input-line"
                        >
                                    Email:
                                    <input
                                                name="email"
                                                onChange={[Function]}
                                                type="text"
                                    />
                        </div>
                        <div
                                    className="radio-input"
                        >
                                    <label
                                                htmlFor="customer"
                                    >
                                                Customer
                                    </label>
                                    <input
                                                id="customer"
                                                name="login_type"
                                                onChange={[Function]}
                                                type="radio"
                                                value="customer"
                                    />
                                    <label
                                                htmlFor="chef"
                                    >
                                                Chef
                                    </label>
                                    <input
                                                id="chef"
                                                name="login_type"
                                                onChange={[Function]}
                                                type="radio"
                                                value="chef"
                                    />
                        </div>
            </div>
</div>,
          <div
            className="panel-footer"
>
            <Link
                        onClick={[Function]}
                        replace={false}
                        to="login"
            >
                        <button
                                    className="btn next-btn"
                        >
                                    Sign up
                        </button>
            </Link>
</div>,
        ],
        "className": "outer-panel",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="title"
>
                Sign up
</h2>,
              <div
                className="input-fields"
>
                <div
                                className="input-line"
                >
                                Username:
                                <input
                                                name="username"
                                                onChange={[Function]}
                                                type="text"
                                />
                </div>
                <div
                                className="input-line"
                >
                                Password:
                                <input
                                                name="password"
                                                onChange={[Function]}
                                                type="password"
                                />
                </div>
                <div
                                className="input-line"
                >
                                Re-enter Password:
                                <input
                                                name="check_password"
                                                onChange={[Function]}
                                                type="password"
                                />
                </div>
                <div
                                className="input-line"
                >
                                Email:
                                <input
                                                name="email"
                                                onChange={[Function]}
                                                type="text"
                                />
                </div>
                <div
                                className="radio-input"
                >
                                <label
                                                htmlFor="customer"
                                >
                                                Customer
                                </label>
                                <input
                                                id="customer"
                                                name="login_type"
                                                onChange={[Function]}
                                                type="radio"
                                                value="customer"
                                />
                                <label
                                                htmlFor="chef"
                                >
                                                Chef
                                </label>
                                <input
                                                id="chef"
                                                name="login_type"
                                                onChange={[Function]}
                                                type="radio"
                                                value="chef"
                                />
                </div>
</div>,
            ],
            "className": "panel-body",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Sign up",
                "className": "title",
              },
              "ref": null,
              "rendered": "Sign up",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="input-line"
>
                    Username:
                    <input
                                        name="username"
                                        onChange={[Function]}
                                        type="text"
                    />
</div>,
                  <div
                    className="input-line"
>
                    Password:
                    <input
                                        name="password"
                                        onChange={[Function]}
                                        type="password"
                    />
</div>,
                  <div
                    className="input-line"
>
                    Re-enter Password:
                    <input
                                        name="check_password"
                                        onChange={[Function]}
                                        type="password"
                    />
</div>,
                  <div
                    className="input-line"
>
                    Email:
                    <input
                                        name="email"
                                        onChange={[Function]}
                                        type="text"
                    />
</div>,
                  <div
                    className="radio-input"
>
                    <label
                                        htmlFor="customer"
                    >
                                        Customer
                    </label>
                    <input
                                        id="customer"
                                        name="login_type"
                                        onChange={[Function]}
                                        type="radio"
                                        value="customer"
                    />
                    <label
                                        htmlFor="chef"
                    >
                                        Chef
                    </label>
                    <input
                                        id="chef"
                                        name="login_type"
                                        onChange={[Function]}
                                        type="radio"
                                        value="chef"
                    />
</div>,
                ],
                "className": "input-fields",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Username:",
                      <input
                        name="username"
                        onChange={[Function]}
                        type="text"
/>,
                    ],
                    "className": "input-line",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Username:",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "name": "username",
                        "onChange": [Function],
                        "type": "text",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Password:",
                      <input
                        name="password"
                        onChange={[Function]}
                        type="password"
/>,
                    ],
                    "className": "input-line",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Password:",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "name": "password",
                        "onChange": [Function],
                        "type": "password",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Re-enter Password:",
                      <input
                        name="check_password"
                        onChange={[Function]}
                        type="password"
/>,
                    ],
                    "className": "input-line",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Re-enter Password:",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "name": "check_password",
                        "onChange": [Function],
                        "type": "password",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Email:",
                      <input
                        name="email"
                        onChange={[Function]}
                        type="text"
/>,
                    ],
                    "className": "input-line",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Email:",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "name": "email",
                        "onChange": [Function],
                        "type": "text",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <label
                        htmlFor="customer"
>
                        Customer
</label>,
                      <input
                        id="customer"
                        name="login_type"
                        onChange={[Function]}
                        type="radio"
                        value="customer"
/>,
                      <label
                        htmlFor="chef"
>
                        Chef
</label>,
                      <input
                        id="chef"
                        name="login_type"
                        onChange={[Function]}
                        type="radio"
                        value="chef"
/>,
                    ],
                    "className": "radio-input",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Customer",
                        "htmlFor": "customer",
                      },
                      "ref": null,
                      "rendered": "Customer",
                      "type": "label",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "id": "customer",
                        "name": "login_type",
                        "onChange": [Function],
                        "type": "radio",
                        "value": "customer",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Chef",
                        "htmlFor": "chef",
                      },
                      "ref": null,
                      "rendered": "Chef",
                      "type": "label",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "id": "chef",
                        "name": "login_type",
                        "onChange": [Function],
                        "type": "radio",
                        "value": "chef",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              onClick={[Function]}
              replace={false}
              to="login"
>
              <button
                            className="btn next-btn"
              >
                            Sign up
              </button>
</Link>,
            "className": "panel-footer",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <button
                className="btn next-btn"
>
                Sign up
</button>,
              "onClick": [Function],
              "replace": false,
              "to": "login",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Sign up",
                "className": "btn next-btn",
              },
              "ref": null,
              "rendered": "Sign up",
              "type": "button",
            },
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Signup Component should render initial layout 1`] = `
Array [
  <div
    className="outer-panel"
>
    <div
        className="panel-body"
    >
        <h2
            className="title"
        >
            Sign up
        </h2>
        <div
            className="input-fields"
        >
            <div
                className="input-line"
            >
                Username:
                <input
                    name="username"
                    onChange={[Function]}
                    type="text"
                />
            </div>
            <div
                className="input-line"
            >
                Password:
                <input
                    name="password"
                    onChange={[Function]}
                    type="password"
                />
            </div>
            <div
                className="input-line"
            >
                Re-enter Password:
                <input
                    name="check_password"
                    onChange={[Function]}
                    type="password"
                />
            </div>
            <div
                className="input-line"
            >
                Email:
                <input
                    name="email"
                    onChange={[Function]}
                    type="text"
                />
            </div>
            <div
                className="radio-input"
            >
                <label
                    htmlFor="customer"
                >
                    Customer
                </label>
                <input
                    id="customer"
                    name="login_type"
                    onChange={[Function]}
                    type="radio"
                    value="customer"
                />
                <label
                    htmlFor="chef"
                >
                    Chef
                </label>
                <input
                    id="chef"
                    name="login_type"
                    onChange={[Function]}
                    type="radio"
                    value="chef"
                />
            </div>
        </div>
    </div>
    <div
        className="panel-footer"
    >
        <Link
            onClick={[Function]}
            replace={false}
            to="login"
        >
            <button
                className="btn next-btn"
            >
                Sign up
            </button>
        </Link>
    </div>
</div>,
]
`;
